[project]
name = "voice-biometrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "noisereduce>=3.0.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pedalboard>=0.9.21",
    "playsound3>=3.3.0",
    "resampy>=0.4.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
